--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -9,12 +9,11 @@
     <link rel="preload" id="webassembly" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="p07-vimkeys-game.styles.css" rel="stylesheet" />
+    <!-- <link href="p07-vimkeys-game.styles.css" rel="stylesheet" /> -->
     <script type="importmap"></script>
 </head>
 
 <body>
-    <h1>WHAT'S UP!!!</h1>
     <div id="app">
         <svg class="loading-progress">
             <circle r="40%" cx="50%" cy="50%" />
