feat: introduce grid and keyboard to Home.razor

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -23,6 +23,7 @@
     </div>
 
     <script src="_framework/blazor.webassembly#[.{fingerprint}].js"></script>
+    <script src="js/keyboard.js"></script>
 </body>
 
 </html>
