devops: trial and error act2

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -22,7 +22,8 @@
         <div class="loading-progress-text"></div>
     </div>
 
-    <script src="_framework/blazor.webassembly#[.{fingerprint}].js"></script>
+    <!-- <script src="_framework/blazor.webassembly#[.{fingerprint}].js"></script> -->
+    <script src="_framework/blazor.webassembly.js"></script>
     <script src="js/keyboard.js"></script>
 </body>
 
