--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -9,7 +9,7 @@
     <link rel="preload" id="webassembly" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <!-- <link href="p07-vimkeys-game.styles.css" rel="stylesheet" /> -->
+    <link href="p07-vimkeys-game.styles.css" rel="stylesheet" />
     <script type="importmap"></script>
 </head>
 
